-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 RC
-
None
-
-
7c4363ba4c1b7e0618fc277c0e60cef3242917c0 (qt/qtbase/dev) 560d839461d0baae5d2b7088a32fb0e6f3519a28 (qt/qtbase/dev)
Hi, I recently compiled a trivial example to WASM and tried to run it in Chrome, however after a minute or so, the process crashes because of an exception thrown by emscripten (toWireType). Apparently it tries to handle a value which is undefined at the time, passed via __emval_as. The qtbase used for compiling has hash 07516c0811bf0ea02d1a8b4efc7ab7e9d63868f0 (28th of April, dev branch).
Here is the stack trace:
toWireType (VM20:5376)
__emval_as (VM20:5618)
int emscripten::val::as<int>() const (val.h:496)
QWasmString::toQString(emscripten::val const&) (qwasmstring.cpp:55)
QWasmScreen::canvasId() const (qwasmscreen.cpp:103)
QWasmScreen::updateQScreenAndCanvasRenderSize() (qwasmscreen.cpp:201)
QWasmScreen::canvasResizeObserverCallback(emscripten::val, emscripten::val) (qwasmscreen.cpp:238)
emscripten::internal::Invoker<void, emscripten::val, emscripten::val>::invoke(void
(emscripten::val, emscripten::val), emscripten::internal::_EM_VAL*, emscripten::internal::_EM_VAL*) (bind.h:354)
qtCanvasResizeObserverCallback (VM67:9)
- resulted in
-
QTBUG-108889 Reinstate the canvas resize observer in QWasmScreen
-
- Reported
-